<resources>
    <string name="app_name">Client</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="send">发送</string>
    <string name="receive">接收</string>
    <string name="connect">连接</string>
    <string name="disConnect">断开连接</string>
    <string name="connected">Connected</string>
    <string name="unConnected">unConnected</string>
    <string name="sending">文件正在发送中…</string>
    <string name="receiving">文件正在接收中…</string>
    <string name="connectSuccess">成功建立连接:）</string>
    <string name="connectFail">连接失败T_T</string>
    <string name="disconnectSuccess">已断开连接</string>
    <string name="sendSuccess">文件发送完毕:）</string>
    <string name="receiveSuccess">文件接收完毕:）</string>
    <string name="sendAbort">发送中止</string>
</resources>