<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.MainActivity">
    <TextView
        android:id="@+id/tvSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/connected"
        android:layout_marginTop="40dp"
        android:textSize="30dp"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/ip"
        app:layout_constraintBottom_toBottomOf="@+id/tvIP"
        app:layout_constraintRight_toLeftOf="@+id/tvIP"
        app:layout_constraintTop_toTopOf="@+id/tvIP" />
    <TextView
        android:id="@+id/tvIP"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toLeftOf="@+id/etIP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignal" />
    <EditText
        android:id="@+id/etIP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textUri"
        android:textSize="24sp"
        tools:text="http://192.168.1.2:8080"
        app:layout_constraintLeft_toRightOf="@+id/tvIP"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvIP"
        app:layout_constraintBottom_toBottomOf="@+id/tvIP"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/port"
        app:layout_constraintBottom_toBottomOf="@+id/tvPort"
        app:layout_constraintRight_toLeftOf="@+id/tvPort"
        app:layout_constraintTop_toTopOf="@+id/tvPort" />
    <TextView
        android:id="@+id/tvPort"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:layout_marginTop="30dp"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIP"
        app:layout_constraintRight_toLeftOf="@+id/etPort"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/etPort"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textUri"
        android:textSize="24sp"
        tools:text="7080"
        app:layout_constraintLeft_toRightOf="@+id/tvPort"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvPort"
        app:layout_constraintBottom_toBottomOf="@+id/tvPort"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnSend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnReceive"
        app:layout_constraintTop_toBottomOf="@+id/etPort"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:id="@+id/btnReceive"
        app:layout_constraintRight_toLeftOf="@+id/btnConnect"
        app:layout_constraintLeft_toRightOf="@id/btnSend"
        app:layout_constraintTop_toBottomOf="@+id/etPort"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnReceive"
        app:layout_constraintTop_toBottomOf="@+id/etPort"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>